      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

  * Other Improvements:
    -------------------
    * Starter images can be in SVG format.

    * Widened dialog windows, to help avoid word-wrap and overlap problems
      with some prompts, in some locales.
      (SF.net bug #2834461)

    * Shape Tool now locks rotation into 15 or 5 degree steps, when the
      radius of the shape is very small or small, respectively.
      (SF.net bug #2837177)

    * Shape Tool tries to avoid glitches where lines connect, when shape is
      rotated.  (Rotation of fixed-aspect shapes like Square and Octagon
      stays within the angle of the corners. i.e., rotating a square 140 deg.
      actually only rotates it 30 deg., since it looks identical,
      sans glitches.)
      (SF.net bug #2837177)

 * New Starters:
   -------------
    * Elephant
    * Hat
    * Old Soviet Car
    * Skull 
    * Bald Eagle
    * Car 2
    * Desert Tortoise
    * Gecko
    * Manatee
    * Pansy
    * Stained Glass
    * Woodpecker
    * Frame - Filmstrip
    * Frame - Flowers
    * Frame - Picture
    * Frame - Screen
    * Frame - Television
    * Frame - Gold

    From Open Clip Art, curated by 
    Caroline Ford<caroline.ford.work@googlemail.com>

  * New Brush
    ---------
    * Another flower brush
      Made out of some open clipart by C Ford.

  * Localization Updates:
    ---------------------
    * Chinese (Traditional) translation
      Song Huang <songhuang@users.sourceforge.net>

    * Danish translation
      Joe Dalton <joedalton2@yahoo.dk>

    * Dutch translation
      Freek de Kruijf <f.de.kruijf@hetnet.nl>

    * Greek translation
      Kiriaki SERAFEIM <pse04178@rhodes.aegean.gr>

    * Malay translation
      Muhammad Najmi Ahmad Zabidi <najmi.zabidi@gmail.com>
